--- a/front/public/pages/home/home.html
+++ b/front/public/pages/home/home.html
@@ -1,16 +1,17 @@
 <div class="container" id="home-container">
-  <div>
+  <div class="mb-3 col-md-6 m-auto logo-wrapper">
+    <img src="../../images/logo.jpeg" alt="Camagru-logo" width="250" class="logo-img">
   </div>
   
 </div>
 
 <style>
   #home-container {
-    width: 50%;
-    border-radius: 5px;
-    box-shadow: 2px;
-    margin-top: 32px;
-
     padding-bottom: 32px;
   }
+  .logo-wrapper {
+    text-align: center;
+    padding: 0;
+  }
+
 </style>
