--- a/front/public/pages/profile/profile.html
+++ b/front/public/pages/profile/profile.html
@@ -1,1 +1,74 @@
-<div>This is the profile page</div>
+<div>
+  <nav class="navbar navbar-light profile-topBar">
+    <a class="navbar-brand" href="/">
+      <img src="../../images/logo.jpeg" width="60" height="60" alt="">
+    </a>
+    <div class="navbar-text">
+      <div class="username-label" id="username-label"></div>
+      <div class="user-profile-dropdown-menu" id="profile-dropdownMenu">
+        <ul>
+          <li><a href="#">Visit my profile</a></li>
+          <li><a href="#" id="logout">Logout</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </nav>
+</div>
+
+
+<style>
+  body {
+    background-color: white;
+    color: black;
+  }
+
+  .profile-topBar {
+    background-color: var(--bg-primary);
+  }
+
+  .navbar-text {
+    padding-right: 16px;
+    color: white !important;
+
+    .username-label {
+      cursor: pointer;
+      padding: 10px;
+      transition: color 0.3s;
+      font-weight: 500;
+    }
+
+    .username-label:hover {
+      color: #a91c84;
+    }
+
+    .user-profile-dropdown-menu {
+      display: none;
+      position: absolute;
+      top: 100%;
+      right: 20px;
+      color: white;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      z-index: 1000;
+      min-width: 150px;
+    }
+
+    .user-profile-dropdown-menu ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .user-profile-dropdown-menu li a {
+      text-decoration: none;
+      color: #333;
+      display: block;
+      padding: 10px;
+      transition: background-color 0.3s;
+    }
+
+    .user-profile-dropdown-menu li a:hover {
+      background-color: #f0f0f0;
+    }
+  }
+</style>
