--- a/front/public/pages/home/home.html
+++ b/front/public/pages/home/home.html
@@ -1,17 +1,17 @@
 <div class="container" id="home-container">
   <div class="mb-3 col-md-6 m-auto logo-wrapper">
-    <img src="../../images/logo.jpeg" alt="Camagru-logo" width="250" class="logo-img">
+    <img src="../../images/logo.png" alt="Camagru-logo" width="250" class="logo-img">
   </div>
-  
+
 </div>
 
 <style>
   #home-container {
     padding-bottom: 32px;
   }
+
   .logo-wrapper {
     text-align: center;
     padding: 0;
   }
-
 </style>
