core(back): refactored and cleanup archi

--- a/front/public/pages/profile/profile.html
+++ b/front/public/pages/profile/profile.html
@@ -54,7 +54,7 @@
       </div>
       <div class="card-deck" id="my-galery">
         <div class="card" style="width: 15rem;">
-          <img class="card-img-top" src="../../images/nice-cat.png" alt="Card image cap">
+          <img class="card-img-top" src="../../images/cat.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
           </div>
