--- a/front/public/pages/profile/profile.html
+++ b/front/public/pages/profile/profile.html
@@ -1,7 +1,7 @@
 <div>
   <nav class="navbar navbar-light profile-topBar">
     <a class="navbar-brand" href="/">
-      <img src="../../images/logo.jpeg" width="60" height="60" alt="">
+      <img src="../../images/logo.png" width="60" height="60" alt="">
     </a>
     <div class="navbar-text">
       <div class="username-label" id="username-label"></div>
@@ -43,7 +43,7 @@
     <div class="galery">
       <h2>My galery</h2>
       <div class="mb-3">
-        <button class="btn btn-success">
+        <button class="btn btn-success" id="btn-add-image">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image-fill"
             viewBox="0 0 16 16">
             <path
@@ -54,7 +54,7 @@
       </div>
       <div class="card-deck" id="my-galery">
         <div class="card" style="width: 15rem;">
-          <img class="card-img-top" src="../../images/test.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="../../images/cat.png" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
           </div>
@@ -79,8 +79,29 @@
       </div>
     </div>
   </div>
-
-
+  <div class="block-selfie hidden" id="block-selfie">
+    <video id="video" width="650" height="480" autoplay playsinline></video>
+    <canvas id="canvas" class="hidden" width="650" height="480"></canvas>
+    <div class="selfie-action-wrapper">
+      <button type="button" class="selfie-action-btn" id="take-photo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-camera"
+          viewBox="0 0 16 16">
+          <path
+            d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4z" />
+          <path
+            d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5m0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0" />
+        </svg>
+      </button>
+      <button type="button" class="selfie-action-btn" id="close-photo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle"
+          viewBox="0 0 16 16">
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+          <path
+            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+        </svg>
+      </button>
+    </div>
+  </div>
 </div>
 
 
@@ -168,5 +189,42 @@
     h2 {
       text-align: center;
     }
+  }
+
+  .block-selfie {
+    position: absolute;
+    border: 1px solid gray;
+    top: 10%;
+    right: 0;
+    left: 0;
+    margin: auto;
+    max-width: 652px;
+    background-color: gray;
+  }
+
+  video {
+    display: block;
+    margin: auto;
+    height: auto;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  .selfie-action-btn {
+    display: block;
+    background-color: var(--bg-primary);
+    color: white;
+    margin: auto;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: 16px;
+  }
+
+  .selfie-action-wrapper {
+    display: flex;
   }
 </style>
