feat(auth): managed user session

--- a/front/public/pages/profile/profile.html
+++ b/front/public/pages/profile/profile.html
@@ -7,7 +7,7 @@
       <div class="username-label" id="username-label"></div>
       <div class="user-profile-dropdown-menu" id="profile-dropdownMenu">
         <ul>
-          <li><a href="/logout" id="logout">Logout</a></li>
+          <li><a href="" id="logout">Logout</a></li>
         </ul>
       </div>
 
